feat: Highlight currently focused/viewed file

--- a/app/assets/stylesheets/pages/diff.scss
+++ b/app/assets/stylesheets/pages/diff.scss
@@ -69,6 +69,11 @@
     }
   }
 
+  .file-title.is-active,
+  .file-title-flex-parent.is-active {
+    background-color: $gray-200;
+  }
+
   @media (min-width: map-get($grid-breakpoints, md)) {
     &.conflict .file-title,
     &.conflict .file-title-flex-parent {
