Added Deploy Key dropdown to protected branches
Added project deploy key dropdown.

--- a/app/assets/stylesheets/framework/dropdowns.scss
+++ b/app/assets/stylesheets/framework/dropdowns.scss
@@ -516,6 +516,10 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+
+  &.inline {
+    display: inline;
+  }
 }
 
 .dropdown-menu-user-username {
@@ -524,6 +528,10 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+
+  &.inline {
+    display: inline;
+  }
 }
 
 .dropdown-select {
