--- a/ee/app/assets/stylesheets/pages/roadmap.scss
+++ b/ee/app/assets/stylesheets/pages/roadmap.scss
@@ -560,3 +560,15 @@ html.group-epics-roadmap-html {
   color: $gray-700;
   padding-top: $gl-spacing-scale-1;
 }
+
+// There are several styling issues happening while using
+// `GlFilteredSearch` in roadmap due to some our global
+// styles which we need to override until those are fixed
+// at framework level.
+.epics-roadmap-filters-gl-ui {
+  .gl-search-box-by-click {
+    .gl-filtered-search-scrollable {
+      border-radius: 0;
+    }
+  }
+}
