Add dismiss functionality to suggest pipeline
- allow users to not be hassled constantly

--- a/app/assets/stylesheets/pages/merge_requests.scss
+++ b/app/assets/stylesheets/pages/merge_requests.scss
@@ -406,6 +406,10 @@ $mr-widget-min-height: 69px;
       .circle-icon-container {
         color: $gl-text-color-quaternary;
       }
+
+      .dismiss-icon {
+        color: $gray-700;
+      }
     }
   }
 
