Remove old JS and related code and specs
- Remove code around changing of buttons (which are
now replaced by Vue elements).
- Simplify all JS and remove related HAML code.
- Remove specs of old code.

--- a/ee/app/views/projects/settings/slacks/edit.html.haml
+++ b/ee/app/views/projects/settings/slacks/edit.html.haml
@@ -16,8 +16,8 @@
 
       .footer-block.row-content-block
         %button.btn.btn-success{ type: 'submit' }
-          .spinner.spinner-light.js-btn-spinner
-          %span.js-btn-label
+          .spinner.spinner-light
+          %span
             Save changes
         &nbsp;
         = link_to 'Cancel', edit_project_service_path(@project, @service), class: 'btn btn-cancel'
