--- a/ee/app/views/projects/protected_branches/_update_protected_branch.html.haml
+++ b/ee/app/views/projects/protected_branches/_update_protected_branch.html.haml
@@ -7,6 +7,8 @@
 - group_merge_access_levels = protected_branch.merge_access_levels.for_group
 - group_push_access_levels = protected_branch.push_access_levels.for_group
 
+- select_mode_for_dropdown = Feature.enabled?(:deploy_keys_on_protected_branches, @project) ? 'js-multiselect' : ''
+
 %td
   = hidden_field_tag "allowed_to_merge_#{protected_branch.id}", merge_access_level&.access_level
   = dropdown_tag( (merge_access_level&.humanize || 'Select') ,
@@ -28,7 +30,7 @@
 %td
   = hidden_field_tag "allowed_to_push_#{protected_branch.id}", push_access_level&.access_level
   = dropdown_tag( (push_access_level&.humanize || 'Select') ,
-                 options: { toggle_class: 'js-allowed-to-push', dropdown_class: 'dropdown-menu-selectable js-allowed-to-push-container capitalize-header',
+                 options: { toggle_class: "js-allowed-to-push #{select_mode_for_dropdown}", dropdown_class: 'dropdown-menu-selectable js-allowed-to-push-container capitalize-header',
                  data: { field_name: "allowed_to_push_#{protected_branch.id}", access_level_id: push_access_level&.id }})
   - if user_push_access_levels.any?
     %p.small
