--- a/app/views/layouts/_page.html.haml
+++ b/app/views/layouts/_page.html.haml
@@ -3,6 +3,7 @@
     = render "layouts/nav/sidebar/#{nav}"
   .content-wrapper{ class: "#{@content_wrapper_class}" }
     .mobile-overlay
+    = yield :invite_banner
     .alert-wrapper
       = render 'shared/outdated_browser'
       = render_if_exists 'layouts/header/users_over_license_banner'
