--- a/ee/app/assets/stylesheets/components/compliance_dashboard/dashboard.scss
+++ b/ee/app/assets/stylesheets/components/compliance_dashboard/dashboard.scss
@@ -4,7 +4,7 @@
 
   .dashboard-grid {
     display: grid;
-    grid-template-columns: 1fr auto auto auto;
+    grid-template-columns: 1fr auto auto 35%;
     grid-template-rows: auto;
   }
 
