Update per feedback

--- a/app/assets/stylesheets/pages/incident_management_list.scss
+++ b/app/assets/stylesheets/pages/incident_management_list.scss
@@ -90,6 +90,10 @@
   }
 
   @include media-breakpoint-down(xs) {
+    .incident-management-list-header {
+      display: block;
+    };
+
     .create-incident-button {
       @include gl-w-full;
     }
