--- a/ee/app/views/projects/protected_branches/_update_protected_branch.html.haml
+++ b/ee/app/views/projects/protected_branches/_update_protected_branch.html.haml
@@ -1,44 +1,1 @@
-- merge_access_levels = protected_branch.merge_access_levels.for_role
-- push_access_levels = protected_branch.push_access_levels.for_role
-
-- user_merge_access_levels = protected_branch.merge_access_levels.for_user
-- user_push_access_levels = protected_branch.push_access_levels.for_user
-
-- group_merge_access_levels = protected_branch.merge_access_levels.for_group
-- group_push_access_levels = protected_branch.push_access_levels.for_group
-
-%td.merge_access_levels-container
-  = hidden_field_tag "allowed_to_merge_#{protected_branch.id}", merge_access_levels.first&.access_level
-  = dropdown_tag( (merge_access_levels.first&.humanize || 'Select') ,
-                 options: { toggle_class: 'js-allowed-to-merge', dropdown_class: 'dropdown-menu-selectable js-allowed-to-merge-container capitalize-header',
-                 data: { field_name: "allowed_to_merge_#{protected_branch.id}", preselected_items: access_levels_data(merge_access_levels) }})
-  - if user_merge_access_levels.any?
-    %p.small
-      The following
-      #{ 'user'.pluralize(user_merge_access_levels.size) }
-      can also merge into this branch:
-      #{ user_merge_access_levels.map(&:humanize).to_sentence }
-  - if group_merge_access_levels.any?
-    %p.small
-      Members of
-      #{ group_merge_access_levels.size > 1 ? 'these groups' : 'this group' }
-      can also merge into this branch:
-      #{ group_merge_access_levels.map(&:humanize).to_sentence }
-
-%td.push_access_levels-container
-  = hidden_field_tag "allowed_to_push_#{protected_branch.id}", push_access_levels.first&.access_level
-  = dropdown_tag( (push_access_levels.first&.humanize || 'Select') ,
-                 options: { toggle_class: 'js-allowed-to-push', dropdown_class: 'dropdown-menu-selectable js-allowed-to-push-container capitalize-header',
-                 data: { field_name: "allowed_to_push_#{protected_branch.id}", preselected_items: access_levels_data(push_access_levels) }})
-  - if user_push_access_levels.any?
-    %p.small
-      The following
-      #{ 'user'.pluralize(user_push_access_levels.size) }
-      can also push to this branch:
-      #{ user_push_access_levels.map(&:humanize).to_sentence }
-  - if group_push_access_levels.any?
-    %p.small
-      Members of
-      #{ group_push_access_levels.size > 1 ? 'these groups' : 'this group' }
-      can also push to this branch:
-      #{ group_push_access_levels.map(&:humanize).to_sentence }
+= render 'shared/projects/protected_branches/update_protected_branch', protected_branch: protected_branch
