Update per feedback

--- a/app/assets/stylesheets/pages/incident_management_list.scss
+++ b/app/assets/stylesheets/pages/incident_management_list.scss
@@ -91,7 +91,7 @@
 
   @include media-breakpoint-down(xs) {
     .incident-management-list-header {
-      display: block;
+      flex-direction: column-reverse;
     };
 
     .create-incident-button {
